--- a/level 26/class/cw.css
+++ b/level 26/class/cw.css
@@ -9,7 +9,7 @@ p {
 p {
     text-decoration: overline;
     text-decoration: underline;
-    text-decoration: line-through
+    text-decoration: line-through;
 
 }
 
