--- a/level 41/class/animations.css
+++ b/level 41/class/animations.css
@@ -17,6 +17,9 @@ div {
     animation-duration: 2s;
     animation-delay: 2s;
     animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-fill-mode: none;
+    animation-timing-function: ease;
 }
 
 @keyframes rainbow {
