twenty eighth commit

--- a/level 45/home/social-proof-section-master/social-proof-section-master/style.css
+++ b/level 45/home/social-proof-section-master/social-proof-section-master/style.css
@@ -42,6 +42,7 @@ body {
 
 
 .upper {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -74,14 +75,19 @@ body {
 }
 
 .rate1 {
+    display: flex;
     align-self: start;
 }
 
 .rate2 {
+    display: flex;
+
     align-self: center;
 }
 
 .rate3 {
+    display: flex;
+
     align-self: end;
 }
 
@@ -181,7 +187,7 @@ body {
     .rate1, .rate2, .rate3 {
         align-self: center;
         border-radius: 10px;
-        
+        max-width: 90%;
         justify-content: center;
     
         
@@ -189,11 +195,14 @@ body {
 
     .reviews {
         flex-direction: column;
+        
     
     }
 
     .review1, .review2, .review3 {
         align-self: center;
+        max-width: 90%;
+        min-width: 55%;
         
     }
 
