--- a/level 72/home/style.css
+++ b/level 72/home/style.css
@@ -7,12 +7,12 @@
 }
 
 header {
-    background-color: #FFC8DD;
+    background-color: #914361;
     display: flex;
     padding: 20px 50px;
     align-items: center;
     gap: 20px;
-    color: #b7205a
+    color: #ffffff
 }
 
 
@@ -26,7 +26,8 @@ header h3 {
 }
 
 body {
-    background-color: #cbd2d8;
+    height: 100vh;
+    background: linear-gradient(135deg, pink, red, purple);
     font-family: roboto;
 }
 
@@ -57,7 +58,7 @@ body {
 button {
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: 7px;
     padding: 5px 10px;
     border: 1px solid #b7205a;
     border-radius: 5px;
@@ -75,6 +76,6 @@ button {
 }
 
 #result.red {
-    color: red;
+    color: rgb(79, 0, 0);
 }
 
